tests/snapshots/snapshots__pipeline@rankn_rank3.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/rankn_rank3.pr
---
== tokens ==
VOpen Fn Ident("rank3") LParen Ident("g") Colon Forall Ident("a") Dot LParen Forall Ident("b") Dot LParen Ident("b") RParen Arrow Ident("b") Comma Ident("a") RParen Arrow Ident("a") RParen Colon KwInt Eq Ident("g") LParen Lambda LParen Ident("x") RParen Arrow Ident("x") Comma Int(IntLit { value: 0, suffix: None }) RParen VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("rank3") LParen Lambda LParen Ident("f") Comma Ident("y") RParen Arrow Ident("f") LParen Ident("y") RParen RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "rank3",
            params: [
                Param {
                    name: "g",
                    ty: Some(
                        Forall(
                            [
                                "a",
                            ],
                            Fun(
                                [
                                    Forall(
                                        [
                                            "b",
                                        ],
                                        Fun(
                                            [
                                                Var(
                                                    "b",
                                                ),
                                            ],
                                            Empty,
                                            Var(
                                                "b",
                                            ),
                                        ),
                                    ),
                                    Var(
                                        "a",
                                    ),
                                ],
                                Empty,
                                Var(
                                    "a",
                                ),
                            ),
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "g",
                        ),
                        span: 220..221,
                    },
                    [
                        Spanned {
                            node: Lam(
                                [
                                    Param {
                                        name: "x",
                                        ty: None,
                                        borrow: false,
                                        default: None,
                                    },
                                ],
                                Spanned {
                                    node: Var(
                                        "x",
                                    ),
                                    span: 230..231,
                                },
                            ),
                            span: 222..231,
                        },
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 0,
                                    suffix: None,
                                },
                            ),
                            span: 233..234,
                        },
                    ],
                ),
                span: 220..235,
            },
            wheres: [],
            span: 159..235,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 249..256,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "rank3",
                                    ),
                                    span: 257..262,
                                },
                                [
                                    Spanned {
                                        node: Lam(
                                            [
                                                Param {
                                                    name: "f",
                                                    ty: None,
                                                    borrow: false,
                                                    default: None,
                                                },
                                                Param {
                                                    name: "y",
                                                    ty: None,
                                                    borrow: false,
                                                    default: None,
                                                },
                                            ],
                                            Spanned {
                                                node: Call(
                                                    Spanned {
                                                        node: Var(
                                                            "f",
                                                        ),
                                                        span: 274..275,
                                                    },
                                                    [
                                                        Spanned {
                                                            node: Var(
                                                                "y",
                                                            ),
                                                            span: 276..277,
                                                        },
                                                    ],
                                                ),
                                                span: 274..278,
                                            },
                                        ),
                                        span: 263..278,
                                    },
                                ],
                            ),
                            span: 257..279,
                        },
                    ],
                ),
                span: 249..280,
            },
            wheres: [],
            span: 237..280,
        },
    ],
}

== types ==
rank3 : (forall a. (forall b. (b) -> b, a) -> a) -> Int
main : () -> Unit ! {IO}

== core (cbpv) ==
fn rank3(g) =
  return thunk { \x. return x } to t@0
  return 0 to t@1
  return g to t@2
  (force t@2)(t@0, t@1)
fn main() =
  thunk { \f y.
    return y to t@3
    return f to t@4
    (force t@4)(t@3)
  } to t@5
  rank3(t@5) to t@6
  print t@6 to t@7
  print_nl

== fbip (rc) ==
fn rank3(g) =
  return thunk { \x. return x } to t@0
  return 0 to t@1
  return g to t@2
  (force t@2)(t@0, t@1)
fn main() =
  thunk { \f y.
    return y to t@3
    return f to t@4
    (force t@4)(t@3)
  } to t@5
  rank3(t@5) to t@6
  print t@6 to t@7
  drop t@7
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [800 x i8] c"scheme  prism-core-hash-v2\0Abundle  5d7b54f14b510b4574ed0e295d89760c032849b828bdc6a1225184ae4fa8a716\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:5d7b54f14b510b4574ed0e295d89760c032849b828bdc6a1225184ae4fa8a716\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  ee774b1a0c10ad7a485f2846e81c31411f94f287b0a12a0641741ae285193b61  main\0Afn      prismfn_rank3  29ef00b61d7e02e2b0de87cb061c0876a619bff105bb27dcad7ea83b279e28a0  rank3\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [904 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  5d7b54f14b510b4574ed0e295d89760c032849b828bdc6a1225184ae4fa8a716\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:5d7b54f14b510b4574ed0e295d89760c032849b828bdc6a1225184ae4fa8a716\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main ee774b1a0c10ad7a485f2846e81c31411f94f287b0a12a0641741ae285193b61 main arity 0 slots abi-word[]\0Astate prismfn_rank3 29ef00b61d7e02e2b0de87cb061c0876a619bff105bb27dcad7ea83b279e28a0 rank3 arity 1 slots abi-word[arg0=%a0:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"ee774b1a0c10ad7a485f2846e81c31411f94f287b0a12a0641741ae285193b61\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  %t6 = call ptr @prism_alloc(i64 0)
  %t7 = getelementptr inbounds i8, ptr %t6, i64 8
  store i64 6217696733472061813, ptr %t7, align 8
  %t9 = ptrtoint ptr %t6 to i64
  %t11 = call i64 @prismap_2(i64 %t4, i64 %t9, i64 1)
  call void @prism_rc_dec(i64 %t4)
  call void @prism_print_int(i64 %t11)
  call void @prism_rc_dec(i64 %t11)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_2(i64 %_clos, i64 %_a0, i64 %_a1) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
    i64 6217696733472061813, label %_lam6217696733472061813
    i64 7170891667029511803, label %_lam7170891667029511803
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0, i64 %_a1)
  br label %_merge

_lam6217696733472061813:                          ; preds = %entry
  call void @prism_apply_error()
  unreachable

_lam7170891667029511803:                          ; preds = %entry
  %_fp7170891667029511803_0 = getelementptr inbounds i8, ptr %_cp, i64 24
  %_fv7170891667029511803_0 = load i64, ptr %_fp7170891667029511803_0, align 8
  call void @prism_apply_error()
  unreachable

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0, i64 %_p1) #0 {
entry:
  %t0 = call i64 @prismap_1(i64 %_p0, i64 %_p1)
  call void @prism_rc_dec(i64 %_p0)
  ret i64 %t0
}

; Function Attrs: nounwind
define i64 @prismap_1(i64 %_clos, i64 %_a0) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
    i64 6217696733472061813, label %_lam6217696733472061813
    i64 7170891667029511803, label %_lam7170891667029511803
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_ac4180332117194187166 = call ptr @prism_alloc(i64 1)
  %_atp4180332117194187166 = getelementptr inbounds i8, ptr %_ac4180332117194187166, i64 8
  store i64 7170891667029511803, ptr %_atp4180332117194187166, align 8
  %_afp4180332117194187166_0 = getelementptr inbounds i8, ptr %_ac4180332117194187166, i64 24
  store i64 %_a0, ptr %_afp4180332117194187166_0, align 8
  %_r4180332117194187166 = ptrtoint ptr %_ac4180332117194187166 to i64
  br label %_merge

_lam6217696733472061813:                          ; preds = %entry
  %_r6217696733472061813 = call i64 @prismlam_6217696733472061813(i64 %_a0)
  br label %_merge

_lam7170891667029511803:                          ; preds = %entry
  %_fp7170891667029511803_0 = getelementptr inbounds i8, ptr %_cp, i64 24
  %_fv7170891667029511803_0 = load i64, ptr %_fp7170891667029511803_0, align 8
  %_r7170891667029511803 = call i64 @prismlam_7170891667029511803(i64 %_fv7170891667029511803_0, i64 %_a0)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam7170891667029511803, %_lam6217696733472061813, %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ], [ %_r6217696733472061813, %_lam6217696733472061813 ], [ %_r7170891667029511803, %_lam7170891667029511803 ]
  ret i64 %_result
}

; Function Attrs: nounwind
define i64 @prismlam_6217696733472061813(i64 %_p0) #0 {
entry:
  ret i64 %_p0
}

; Function Attrs: nounwind
define i64 @prismlam_7170891667029511803(i64 %_fv0, i64 %_p0) #0 {
entry:
  call void @prism_rc_inc(i64 %_fv0)
  %t0 = call i64 @prismlam_4180332117194187166(i64 %_fv0, i64 %_p0)
  ret i64 %t0
}

; Function Attrs: nounwind
declare void @prism_rc_inc(i64) #0

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
output: [0]
result: ()
