tests/snapshots/snapshots__pipeline@rankn_relay.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/rankn_relay.pr
---
== tokens ==
VOpen Fn Ident("pick") LParen Ident("g") Colon Forall Ident("a") Dot LParen Ident("a") RParen Arrow Ident("a") RParen Colon KwInt Eq VOpen If Ident("g") LParen True RParen Then VOpen Ident("g") LParen Int(IntLit { value: 10, suffix: None }) RParen VClose VSemi Else VOpen Ident("g") LParen Int(IntLit { value: 20, suffix: None }) RParen VClose VClose VSemi Fn Ident("relay") LParen Ident("g") Colon Forall Ident("a") Dot LParen Ident("a") RParen Arrow Ident("a") RParen Colon KwInt Eq Ident("pick") LParen Ident("g") RParen VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("relay") LParen Lambda LParen Ident("x") RParen Arrow Ident("x") RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "pick",
            params: [
                Param {
                    name: "g",
                    ty: Some(
                        Forall(
                            [
                                "a",
                            ],
                            Fun(
                                [
                                    Var(
                                        "a",
                                    ),
                                ],
                                Empty,
                                Var(
                                    "a",
                                ),
                            ),
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: If(
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "g",
                                ),
                                span: 232..233,
                            },
                            [
                                Spanned {
                                    node: Bool(
                                        true,
                                    ),
                                    span: 234..238,
                                },
                            ],
                        ),
                        span: 232..239,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "g",
                                ),
                                span: 249..250,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 10,
                                            suffix: None,
                                        },
                                    ),
                                    span: 251..253,
                                },
                            ],
                        ),
                        span: 249..254,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "g",
                                ),
                                span: 266..267,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 20,
                                            suffix: None,
                                        },
                                    ),
                                    span: 268..270,
                                },
                            ],
                        ),
                        span: 266..271,
                    },
                ),
                span: 229..271,
            },
            wheres: [],
            span: 187..271,
        },
        Decl {
            name: "relay",
            params: [
                Param {
                    name: "g",
                    ty: Some(
                        Forall(
                            [
                                "a",
                            ],
                            Fun(
                                [
                                    Var(
                                        "a",
                                    ),
                                ],
                                Empty,
                                Var(
                                    "a",
                                ),
                            ),
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "pick",
                        ),
                        span: 314..318,
                    },
                    [
                        Spanned {
                            node: Var(
                                "g",
                            ),
                            span: 319..320,
                        },
                    ],
                ),
                span: 314..321,
            },
            wheres: [],
            span: 273..321,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 335..342,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "relay",
                                    ),
                                    span: 343..348,
                                },
                                [
                                    Spanned {
                                        node: Lam(
                                            [
                                                Param {
                                                    name: "x",
                                                    ty: None,
                                                    borrow: false,
                                                    default: None,
                                                },
                                            ],
                                            Spanned {
                                                node: Var(
                                                    "x",
                                                ),
                                                span: 357..358,
                                            },
                                        ),
                                        span: 349..358,
                                    },
                                ],
                            ),
                            span: 343..359,
                        },
                    ],
                ),
                span: 335..360,
            },
            wheres: [],
            span: 323..360,
        },
    ],
}

== types ==
pick : (forall a. (a) -> a) -> Int
relay : (forall a. (a) -> a) -> Int
main : () -> Unit ! {IO}

== core (cbpv) ==
fn pick(g) =
  return true to t@0
  return g to t@1
  (force t@1)(t@0) to t@6
  if t@6 then
    return 10 to t@2
    return g to t@3
    (force t@3)(t@2)
  else
    return 20 to t@4
    return g to t@5
    (force t@5)(t@4)
fn relay(g) =
  return g to t@7
  pick(t@7)
fn main() =
  return thunk { \x. return x } to t@8
  relay(t@8) to t@9
  print t@9 to t@10
  print_nl

== fbip (rc) ==
fn pick(g) =
  dup g
  return true to t@0
  return g to t@1
  (force t@1)(t@0) to t@6
  if t@6 then
    drop t@6
    return 10 to t@2
    return g to t@3
    (force t@3)(t@2)
  else
    drop t@6
    return 20 to t@4
    return g to t@5
    (force t@5)(t@4)
fn relay(g) =
  return g to t@7
  pick(t@7)
fn main() =
  return thunk { \x. return x } to t@8
  relay(t@8) to t@9
  print t@9 to t@10
  drop t@10
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [893 x i8] c"scheme  prism-core-hash-v2\0Abundle  78c900b0d896c2528f1515904e350c0889120817f023f0ef42418ed6184fcdbd\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:78c900b0d896c2528f1515904e350c0889120817f023f0ef42418ed6184fcdbd\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  2eda6e4a7d662346c36b6c4262ba5ce21b7c47f1b0b02a577b10861907cc0b48  main\0Afn      prismfn_pick  fbb7da799ec12b795ed34fa492bc26c8e63e7a66689a5a0da67dfd5acee76887  pick\0Afn      prismfn_relay  3626d8f2d03294538282f24a96e5809d7a46bb5a5fdf39983a83305fa6d855ce  relay\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [1031 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  78c900b0d896c2528f1515904e350c0889120817f023f0ef42418ed6184fcdbd\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:78c900b0d896c2528f1515904e350c0889120817f023f0ef42418ed6184fcdbd\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main 2eda6e4a7d662346c36b6c4262ba5ce21b7c47f1b0b02a577b10861907cc0b48 main arity 0 slots abi-word[]\0Astate prismfn_pick fbb7da799ec12b795ed34fa492bc26c8e63e7a66689a5a0da67dfd5acee76887 pick arity 1 slots abi-word[arg0=%a0:word]\0Astate prismfn_relay 3626d8f2d03294538282f24a96e5809d7a46bb5a5fdf39983a83305fa6d855ce relay arity 1 slots abi-word[arg0=%a0:word]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"2eda6e4a7d662346c36b6c4262ba5ce21b7c47f1b0b02a577b10861907cc0b48\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  call void @prism_rc_inc(i64 %t4)
  %t7 = call i64 @prismap_1(i64 %t4, i64 3)
  call void @prism_rc_dec(i64 %t4)
  %t9 = icmp ne i64 %t7, 1
  br i1 %t9, label %b0, label %b1

b0:                                               ; preds = %entry
  call void @prism_rc_dec(i64 %t7)
  %t12 = call i64 @prismap_1(i64 %t4, i64 21)
  call void @prism_rc_dec(i64 %t4)
  br label %b2

b1:                                               ; preds = %entry
  call void @prism_rc_dec(i64 %t7)
  %t15 = call i64 @prismap_1(i64 %t4, i64 41)
  call void @prism_rc_dec(i64 %t4)
  br label %b2

b2:                                               ; preds = %b1, %b0
  %t16 = phi i64 [ %t12, %b0 ], [ %t15, %b1 ]
  call void @prism_print_int(i64 %t16)
  call void @prism_rc_dec(i64 %t16)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
declare void @prism_rc_inc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_1(i64 %_clos, i64 %_a0) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0) #0 {
entry:
  ret i64 %_p0
}

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
output: [10]
result: ()
