tests/snapshots/snapshots__pipeline@rankn_return.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/rankn_return.pr
---
== tokens ==
VOpen Fn Ident("mkid") LParen RParen Colon Forall Ident("a") Dot LParen Ident("a") RParen Arrow Ident("a") Eq Lambda LParen Ident("x") RParen Arrow Ident("x") VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("mkid") LParen RParen LParen Int(IntLit { value: 7, suffix: None }) RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "mkid",
            params: [],
            ret: Some(
                Forall(
                    [
                        "a",
                    ],
                    Fun(
                        [
                            Var(
                                "a",
                            ),
                        ],
                        Empty,
                        Var(
                            "a",
                        ),
                    ),
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Lam(
                    [
                        Param {
                            name: "x",
                            ty: None,
                            borrow: false,
                            default: None,
                        },
                    ],
                    Spanned {
                        node: Var(
                            "x",
                        ),
                        span: 164..165,
                    },
                ),
                span: 156..165,
            },
            wheres: [],
            span: 123..165,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 179..186,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "mkid",
                                            ),
                                            span: 187..191,
                                        },
                                        [],
                                    ),
                                    span: 187..193,
                                },
                                [
                                    Spanned {
                                        node: Int(
                                            IntLit {
                                                value: 7,
                                                suffix: None,
                                            },
                                        ),
                                        span: 194..195,
                                    },
                                ],
                            ),
                            span: 187..196,
                        },
                    ],
                ),
                span: 179..197,
            },
            wheres: [],
            span: 167..197,
        },
    ],
}

== types ==
mkid : () -> forall a. (a) -> a
main : () -> Unit ! {IO}

== core (cbpv) ==
fn mkid() =
  return thunk { \x. return x }
fn main() =
  return 7 to t@0
  mkid() to t@1
  (force t@1)(t@0) to t@2
  print t@2 to t@3
  print_nl

== fbip (rc) ==
fn mkid() =
  return thunk { \x. return x }
fn main() =
  return 7 to t@0
  mkid() to t@1
  (force t@1)(t@0) to t@2
  print t@2 to t@3
  drop t@3
  print_nl

== llvm ==
; ModuleID = 'prism'
source_filename = "prism"

@prism_native_kont_table = constant [798 x i8] c"scheme  prism-core-hash-v2\0Abundle  626043baf4d21a232352ee2abf57272eceaab82828522b8e9815fd50714701e2\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:626043baf4d21a232352ee2abf57272eceaab82828522b8e9815fd50714701e2\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Afn      prismfn_main  5196c23b946d285aa40486e45e9e958a84649a89ab8dbd89a25e2b7bd010ce1a  main\0Afn      prismfn_mkid  d29ad19445151b8a301daee379d752aafc269d00f978249cec7b04de1ca48f2b  mkid\0A\00", section ",.prism_kont", align 1
@prism_native_kont_state_map = constant [889 x i8] c"state-map 1\0Ascheme  prism-core-hash-v2\0Abundle  626043baf4d21a232352ee2abf57272eceaab82828522b8e9815fd50714701e2\0Acompiler  <version>\0Atarget  <target>\0Abackend  llvm\0Aflag  source-root  prism-core-hash-v2:626043baf4d21a232352ee2abf57272eceaab82828522b8e9815fd50714701e2\0Aflag  stdlib-root  <stdlib-root>\0Aflag  opt  O1\0Aflag  passes  level-default\0Aflag  disabled  none\0Aflag  backend-opt  2\0Aflag  scheduler  cooperative\0Aflag  effect-tier  auto\0Aflag  reify  true\0Aflag  erasures  true\0Aflag  native-effects  true\0Aflag  trampoline  true\0Aflag  fuse  false\0Aflag  borrow-infer  true\0Aflag  rt-checks  false\0Aflag  native-kont-frames  false\0Aslot-format prism-native-abi-word-v1\0Astate prismfn_main 5196c23b946d285aa40486e45e9e958a84649a89ab8dbd89a25e2b7bd010ce1a main arity 0 slots abi-word[]\0Astate prismfn_mkid d29ad19445151b8a301daee379d752aafc269d00f978249cec7b04de1ca48f2b mkid arity 0 slots abi-word[]\0A\00", section ",.prism_kont", align 1
@.kont_symbol0 = private constant [13 x i8] c"prismfn_main\00"
@.kont_hash0 = private constant [65 x i8] c"5196c23b946d285aa40486e45e9e958a84649a89ab8dbd89a25e2b7bd010ce1a\00"
@.kont_name0 = private constant [5 x i8] c"main\00"
@prism_native_kont_ptrs = constant [1 x { ptr, ptr, ptr, ptr }] [{ ptr, ptr, ptr, ptr } { ptr @prismfn_main, ptr @.kont_symbol0, ptr @.kont_hash0, ptr @.kont_name0 }], section ",.prism_kont", align 8
@prism_native_kont_ptrs_len = constant i64 1, section ",.prism_kont", align 8
@llvm.used = appending global [4 x ptr] [ptr @prism_native_kont_table, ptr @prism_native_kont_state_map, ptr @prism_native_kont_ptrs, ptr @prism_native_kont_ptrs_len], section ",llvm.metadata"

; Function Attrs: nounwind
define i64 @prismfn_main() #0 {
entry:
  %t1 = call ptr @prism_alloc(i64 0)
  %t2 = getelementptr inbounds i8, ptr %t1, i64 8
  store i64 4180332117194187166, ptr %t2, align 8
  %t4 = ptrtoint ptr %t1 to i64
  %t6 = call i64 @prismap_1(i64 %t4, i64 15)
  call void @prism_rc_dec(i64 %t4)
  call void @prism_print_int(i64 %t6)
  call void @prism_rc_dec(i64 %t6)
  call void @prism_rc_dec(i64 0)
  call void @prism_print_nl()
  ret i64 0
}

; Function Attrs: nounwind
declare ptr @prism_alloc(i64) #0

; Function Attrs: nounwind
define i64 @prismap_1(i64 %_clos, i64 %_a0) #0 {
entry:
  %_cp = inttoptr i64 %_clos to ptr
  %_tp = getelementptr inbounds i8, ptr %_cp, i64 8
  %_tag = load i64, ptr %_tp, align 8
  switch i64 %_tag, label %_dead [
    i64 4180332117194187166, label %_lam4180332117194187166
  ]

_lam4180332117194187166:                          ; preds = %entry
  %_r4180332117194187166 = call i64 @prismlam_4180332117194187166(i64 %_a0)
  br label %_merge

_dead:                                            ; preds = %entry
  call void @prism_apply_error()
  unreachable

_merge:                                           ; preds = %_lam4180332117194187166
  %_result = phi i64 [ %_r4180332117194187166, %_lam4180332117194187166 ]
  ret i64 %_result
}

; Function Attrs: nounwind
declare void @prism_rc_dec(i64) #0

; Function Attrs: nounwind
declare void @prism_print_int(i64) #0

; Function Attrs: nounwind
declare void @prism_print_nl() #0

; Function Attrs: nounwind
define i64 @prismlam_4180332117194187166(i64 %_p0) #0 {
entry:
  ret i64 %_p0
}

; Function Attrs: nounwind
declare void @prism_apply_error() #0

attributes #0 = { nounwind }

== run ==
output: [7]
result: ()
